fixed job detail page alignment with navbar

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1061,7 +1061,7 @@ body {
     width: 100%;
 }
 #bottom-content {
-    width: 960px;
+    width: 1032px;
     margin: 0 auto;
     left: 0;
     right: 0;
